--- a/freight/html/forgetpassword.html
+++ b/freight/html/forgetpassword.html
@@ -88,9 +88,109 @@
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/zepto.js"></script>
+		<script src="../js/reconnecting-websocket.min.js"></script>
+		<script src="../js/stomp.min.js"></script>
+		<script src="../js/sockjs.min.js"></script>
 		<script src="../js/app.js"></script>
-		<script>
-		    
+		<script type="text/javascript">
+			(function ($, doc) {
+				var tel = doc.getElementById('Tel');
+				var psd = doc.getElementById('UserPassword');
+				var psd_confirm = doc.getElementById('UserPassword_confirm');
+				var yzm = doc.getElementById('yanzhengma');
+				var times = 59;
+		        doc.getElementById('send').addEventListener('tap',function(event){
+		        		console.log(tel.value);
+			    		if(tel.value&&tel.value.length == 11)
+			    		{
+			    			document.getElementById('send').classList.add('mui-disabled');
+					    var senmobile = setInterval(function(){ 
+					    		update_a();
+					    }, 1000);
+					    function stopsenmobile() {
+						    clearInterval(senmobile);
+						    times = 59;
+						}
+						function update_a() {
+							var get_code = doc.getElementById('send');
+							if(times==0) {
+								get_code.innerText = "重新发送";
+								stopsenmobile();
+								document.getElementById('send').classList.remove('mui-disabled');
+							} else {
+								var printnr = times;
+								times--;
+								get_code.innerText = printnr + " 秒";
+							}
+						}
+						var data = {
+			            		queryData:{
+								tradeCode:'getSmscode',
+								username:tel.value
+							}
+			            }
+						lnjoy.GetDataByPost(data,function(rs){
+							mui.toast('验证码发送成功');
+						});
+			    		}else
+			    		{
+			    			$.toast('请输入正确格式的手机号');
+		                return;
+			    		}
+			    });
+			    doc.getElementById('chongzhimima').addEventListener('tap',function(event){
+			    		if(!tel.value)
+			    		{
+			    			$.toast('请输入手机号');
+		                return;
+			    		}
+			    		if(tel.value.length!= 11)
+			    		{
+			    			$.toast('请输入正确的手机号');
+		                return;
+			    		}
+			    		if(!psd.value)
+			    		{
+			    			$.toast('请输入密码');
+		                return;
+			    		}
+			    		if(!psd_confirm.value)
+			    		{
+			    			$.toast('请输入确认密码');
+		                return;
+			    		}
+			    		if(psd.value!=psd_confirm.value)
+			    		{
+			    			$.toast('重置密码必须和密码一致！');
+		                return;
+			    		}
+			    		if(!yzm.value)
+			    		{
+			    			$.toast('请输入验证码');
+		                return;
+			    		}
+			    		var data = {
+		            		queryData:{
+							tradeCode:'forget',
+							username:tel.value,
+							password:psd.value,
+							smscode:yzm.value
+						}
+		            }
+					lnjoy.GetDataByPost(data,function(rs){
+						if(rs.hasOwnProperty("success"))
+						{
+							mui.toast('重置密码成功！');
+							mui.back();
+						}else
+						{
+							mui.toast('重置密码失败！'+rs.details);
+							return;
+						}
+					});
+			    });
+		    }(mui, document));
 		</script>
 	</body>
 </html>
