--- a/freight/html/ZhuCe.html
+++ b/freight/html/ZhuCe.html
@@ -36,6 +36,13 @@
 				height:1rem;
 				vertical-align: middle;
 			}
+			.font-color-blue{
+				color:#0078B9;
+				font-size: 0.8rem;
+			}
+			.checkbox-class{
+				color:blue;
+			}
 		</style>
 	</head>
 	<body>
@@ -68,12 +75,6 @@
 					</li>
 					<li class="mui-table-view-cell">
 						<div class="mui-input-row">
-							<label>支付密码:</label>
-							<input id='UserPassword_confirm' type="password" class="mui-input-clear mui-input" placeholder="请输入支付密码">
-						</div>
-					</li>
-					<li class="mui-table-view-cell">
-						<div class="mui-input-row">
 							<label style="width: 37%;" class="iconfont_log_reg">短信验证码:</label>
 							<input id='yanzhengma' style="width: 40%; float: left;" type="number" class="mui-input-clear  mui-input" placeholder="请输入验证码" style="width:80px;margin-left: 30px;">
 							<div id="send" style="float: left;width: 23%;" class="mui-btn mui-btn-primary mui-btn-outlined">
@@ -84,13 +85,127 @@
 				</ul>
 			</form>
 			<div class="mui-content-padded">
-				<button id='chongzhimima' class="mui-btn mui-btn-block mui-btn-primary">立刻注册</button>
+				<button id='zhuce' class="mui-btn mui-btn-block mui-btn-primary">立刻注册</button>
+				<input id = "checkbox-class" class="checkbox-class" name="checkbox" value="1" type="checkbox" checked>
+				<span id="xy" class="font-color-blue">《“发啥货”软件用户注册及使用协议》</span>
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/zepto.js"></script>
+		<script src="../js/reconnecting-websocket.min.js"></script>
+		<script src="../js/stomp.min.js"></script>
+		<script src="../js/sockjs.min.js"></script>
 		<script src="../js/app.js"></script>
-		<script>
-		    
+		<script type="text/javascript">
+			var cid = "";
+			mui.plusReady(function(){
+				var vInfo = plus.push.getClientInfo();
+				cid = vInfo.clientid;
+			})
+			(function ($, doc) {
+				var tel = doc.getElementById('Tel');
+				var psd = doc.getElementById('UserPassword');
+				var yzm = doc.getElementById('yanzhengma');
+				var times = 59;
+		        doc.getElementById('send').addEventListener('tap',function(event){
+		        		console.log(tel.value);
+			    		if(tel.value&&tel.value.length == 11)
+			    		{
+			    			document.getElementById('send').classList.add('mui-disabled');
+					    var senmobile = setInterval(function(){ 
+					    		update_a();
+					    }, 1000);
+					    function stopsenmobile() {
+						    clearInterval(senmobile);
+						    times = 59;
+						}
+						function update_a() {
+							var get_code = doc.getElementById('send');
+							if(times==0) {
+								get_code.innerText = "重新发送";
+								stopsenmobile();
+								document.getElementById('send').classList.remove('mui-disabled');
+							} else {
+								var printnr = times;
+								times--;
+								get_code.innerText = printnr + " 秒";
+							}
+						}
+						var data = {
+			            		queryData:{
+								tradeCode:'getSmscode',
+								username:tel.value
+							}
+			            }
+						lnjoy.GetDataByPost(data,function(rs){
+							mui.toast('验证码发送成功');
+						});
+			    		}else
+			    		{
+			    			$.toast('请输入正确格式的手机号');
+		                return;
+			    		}
+			    });
+			    doc.getElementById('zhuce').addEventListener('tap',function(event){
+			    		if(!doc.getElementById('checkbox-class').checked)
+			    		{
+			    			mui.alert("协议未确认，不可注册！","提醒");
+			    			return;
+			    		}
+			    		if(!tel.value)
+			    		{
+			    			$.toast('请输入手机号');
+		                return;
+			    		}
+			    		if(tel.value.length!= 11)
+			    		{
+			    			$.toast('请输入正确的手机号');
+		                return;
+			    		}
+			    		if(!psd.value)
+			    		{
+			    			$.toast('请输入密码');
+		                return;
+			    		}
+			    		if(!yzm.value)
+			    		{
+			    			$.toast('请输入验证码');
+		                return;
+			    		}
+			    		var data = {
+		            		queryData:{
+							tradeCode:'register',
+							username:tel.value,
+							password:psd.value,
+							smscode:yzm.value,
+							clientkind:2,
+							cid:cid
+						}
+		            }
+					lnjoy.GetDataByPost(data,function(rs){
+						if(rs.hasOwnProperty("success"))
+						{
+							localStorage.setItem("mgps_UserName", tel.value);
+		            			localStorage.setItem("mgps_UserPassword", psd.value);
+		            			localStorage.setItem("userid", rs.data.userid);
+		            			localStorage.setItem("username", rs.data.username);
+		            			localStorage.setItem("ewmbs", rs.data.ewmbs);
+							mui.toast('注册成功！');
+							clicked('buylist.html', {}, 'slide-in-right');
+							return;
+						}else
+						{
+							mui.toast('注册失败！'+rs.details);
+							return;
+						}
+						console.log('%o',rs);
+						//mui.toast('验证码发送成功');
+					});
+			    });
+			    doc.getElementById('xy').addEventListener('tap',function(event){
+			    		 clicked('xy.html',{},'slide-in-right');
+			    })
+		    }(mui, document));
 		</script>
 	</body>
 </html>
