--- a/freight/html/companydetail.html
+++ b/freight/html/companydetail.html
@@ -169,5 +169,9 @@
 		</section>
 	</body>
 	<script src="../js/mui.min.js"></script>
+	<script src="../js/zepto.js"></script>
+	<script src="../js/reconnecting-websocket.min.js"></script>
+	<script src="../js/stomp.min.js"></script>
+	<script src="../js/sockjs.min.js"></script>
 	<script src="../js/app.js"></script>
 </html>
