--- a/freight/html/photo.html
+++ b/freight/html/photo.html
@@ -108,6 +108,9 @@
         <script src="../js/mui.min.js"></script>
         <script src='../js/feedback.js'></script>
         <script src='../js/jquery.1.9.1.js'></script>
+        <script src="../js/reconnecting-websocket.min.js"></script>
+		<script src="../js/stomp.min.js"></script>
+		<script src="../js/sockjs.min.js"></script>
         <script src="../js/app.js"></script>
         <script>
             var files = []; 
