--- a/freight/html/setting.html
+++ b/freight/html/setting.html
@@ -204,19 +204,27 @@
 					<div class="mui-scroll">
 						<ul class="mui-table-view mui-table-view-chevron">
 							<li class="mui-table-view-cell mui-media">
-								<a class="mui-navigate-right" href="#account">
+								<img class="mui-media-object mui-pull-left head-img" id="head-img" src="../img/head/3.jpg">
+								<div class="mui-media-body">
+									账号
+									<p class='mui-ellipsis'></p>
+								</div>
+								<!--<a class="mui-navigate-right" href="#account">
 									<img class="mui-media-object mui-pull-left head-img" id="head-img" src="">
 									<div class="mui-media-body">
 										轩程物流
 										<p class='mui-ellipsis'>账号:18136918998</p>
 									</div>
-								</a>
+								</a>-->
 							</li>
 						</ul>
 						<ul class="mui-table-view mui-table-view-chevron">
 							<li class="mui-table-view-cell">
-								<a href="#account" class="mui-navigate-right">账号与安全</a>
+								<a id="czmm" class="mui-navigate-right">重置密码</a>
 							</li>
+							<!--<li class="mui-table-view-cell">
+								<a href="#account" class="mui-navigate-right">账号与安全</a>
+							</li>-->
 						</ul>
 						<ul class="mui-table-view mui-table-view-chevron">
 							<!--<li class="mui-table-view-cell">
@@ -225,17 +233,17 @@
 							<!--<li class="mui-table-view-cell">
 								<a href="#privacy" class="mui-navigate-right">隐私</a>
 							</li>-->
-							<!--<li class="mui-table-view-cell">
+							<li class="mui-table-view-cell">
 								<a href="#general" class="mui-navigate-right">通用</a>
-							</li>-->
+							</li>
 						</ul>
 						<ul class="mui-table-view mui-table-view-chevron">
 							<li class="mui-table-view-cell">
-								<a href="#about" class="mui-navigate-right">关于发啥货 <i class="mui-pull-right update">V1.0.1</i></a>
+								<a href="#version" class="mui-navigate-right">当前版本 <i class="mui-pull-right update_version">V1.0.3</i></a>
 							</li>
 						</ul>
 						<ul class="mui-table-view">
-							<li class="mui-table-view-cell" style="text-align: center;">
+							<li id="out_login" class="mui-table-view-cell" style="text-align: center;">
 								<a>退出登录</a>
 							</li>
 						</ul>
@@ -274,12 +282,12 @@
 							</li>
 						</ul>
 						<ul class="mui-table-view">
-							<li class="mui-table-view-cell">
+							<!--<li class="mui-table-view-cell">
 								<a id="czmm" class="mui-navigate-right">重置密码</a>
-							</li>
-							<li class="mui-table-view-cell">
+							</li>-->
+							<!--<li class="mui-table-view-cell">
 								<a id="czzfmm" class="mui-navigate-right">重置支付密码</a>
-							</li>
+							</li>-->
 						</ul>
 					</div>
 				</div>
@@ -446,6 +454,20 @@
 					<div class="mui-scroll">
 						<ul class="mui-table-view">
 							<li class="mui-table-view-cell">
+								消息推送
+								<div class="mui-switch mui-switch-mini mui-active" id='startmessage'>
+									<div class="mui-switch-handle"></div>
+								</div>
+							</li>
+							<li class="mui-table-view-cell">
+								语音推送
+								<div class="mui-switch mui-switch-mini mui-active" id="startvideo">
+									<div class="mui-switch-handle"></div>
+								</div>
+							</li>
+						</ul>
+						<!--<ul class="mui-table-view">
+							<li class="mui-table-view-cell">
 								多语言
 							</li>
 						</ul>
@@ -462,7 +484,7 @@
 							<li class="mui-table-view-cell">
 								功能
 							</li>
-						</ul>
+						</ul>-->
 					</div>
 				</div>
 			</div>
@@ -558,6 +580,10 @@
 
 	</body>
 	<script src="../js/mui.min.js "></script>
+	<script src="../js/zepto.js"></script>
+	<script src="../js/reconnecting-websocket.min.js"></script>
+	<script src="../js/stomp.min.js"></script>
+	<script src="../js/sockjs.min.js"></script>
 	<script src="../js/app.js"></script>
 	<script src="../js/mui.view.js "></script>
 	<script src='../js/feedback.js'></script>
@@ -573,6 +599,7 @@
 		var shares = {};
 		
 		mui.plusReady(function() {
+			$('.update_version').html("V"+plus.runtime.version);
 			plus.share.getServices(function(s) {
 				if (s && s.length > 0) {
 					for (var i = 0; i < s.length; i++) {
@@ -583,6 +610,47 @@
 			}, function() {
 				console.log("获取分享服务列表失败");
 			});
+			var data = {
+				queryData:{
+					tradeCode:'tbbuser.selectByPrimaryKey',
+					userid:localStorage.getItem('userid')
+				}
+			};
+			lnjoy.GetDataByPost(data,function(rs){
+				console.log('%o',rs);
+				$('.mui-ellipsis').html(rs.list[0].username);
+			});
+			
+			if(localStorage.getItem('startvideo'))
+			{
+				if(localStorage.getItem('startvideo') == 0)
+				{
+					mui("#startvideo").switch().toggle();
+				}
+			}
+			if(localStorage.getItem('startmessage'))
+			{
+				if(localStorage.getItem('startmessage') == 0)
+				{
+					mui("#startmessage").switch().toggle();
+				}
+			}
+			var data_userphoto = {
+				queryData:{
+					tradeCode:'tbbuserphoto.selectUserphoto',
+					userid:localStorage.getItem('userid'),
+					userphotogltype:6
+				}
+			}
+			lnjoy.GetDataByPost(data_userphoto,function(rs){
+				console.log('%o',rs);
+				console.log(rs.data.length)
+				if(rs.data.length>0)
+				{
+					$('#head-img').attr("src", rs.data[0].photoUrl);
+				}
+				//$('#title').html(rs.list[0].userxm);
+			});
 		});
 		
 		setTimeout(function () {
@@ -592,13 +660,34 @@
 			}, 300);
 		},500);
 		
+		document.getElementById('startvideo').addEventListener('toggle',function(event){
+			if(event.detail.isActive == true)
+				localStorage.setItem('startvideo',1);
+			else
+				localStorage.setItem('startvideo',0);
+		})
+		
+		document.getElementById('startmessage').addEventListener('toggle',function(event){
+			if(event.detail.isActive == true)
+				localStorage.setItem('startmessage',1);
+			else
+				localStorage.setItem('startmessage',0);
+		})
+		
 		document.getElementById("czmm").addEventListener('tap', function() {
 			clicked('czmm.html', {}, 'slide-in-right');
 		});
 		
-		document.getElementById("czzfmm").addEventListener('tap', function() {
-			clicked('czzfmm.html', {}, 'slide-in-right');
+		//out_login
+		document.getElementById("out_login").addEventListener('tap', function() {
+			localStorage.removeItem('userid');
+			localStorage.removeItem('ewmbs');
+			localStorage.removeItem('username');
+			clicked('buylist.html', {}, 'slide-in-right');
 		});
+//		document.getElementById("czzfmm").addEventListener('tap', function() {
+//			clicked('czzfmm.html', {}, 'slide-in-right');
+//		});
 		
 		//分享链接点击事件
 		document.getElementById("share").addEventListener('tap', function() {
@@ -665,17 +754,17 @@
 			});
 		}
 		//去评分
-		document.getElementById("rate").addEventListener('tap', function() {
-			if (mui.os.ios) {
-				location.href = 'https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewContentsUserReviews?id=682211190&pageNumber=0&sortOrdering=2&type=&mt=8';
-			} else if (mui.os.android) {
-				plus.runtime.openURL("market://details?id=io.dcloud.HelloMUI", function(e) {
-					plus.runtime.openURL("market://details?id=io.dcloud.HelloMUI", function(e) {
-						mui.alert("360手机助手和应用宝，你一个都没装，暂时无法评分，感谢支持");
-					}, "com.qihoo.appstore");
-				}, "com.tencent.android.qqdownloader");
-			}
-		});
+//		document.getElementById("rate").addEventListener('tap', function() {
+//			if (mui.os.ios) {
+//				location.href = 'https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewContentsUserReviews?id=682211190&pageNumber=0&sortOrdering=2&type=&mt=8';
+//			} else if (mui.os.android) {
+//				plus.runtime.openURL("market://details?id=io.dcloud.HelloMUI", function(e) {
+//					plus.runtime.openURL("market://details?id=io.dcloud.HelloMUI", function(e) {
+//						mui.alert("360手机助手和应用宝，你一个都没装，暂时无法评分，感谢支持");
+//					}, "com.qihoo.appstore");
+//				}, "com.tencent.android.qqdownloader");
+//			}
+//		});
 		//客服电话
 		document.getElementById("tel").addEventListener('tap', function() {
 			if(mui.os.plus){
@@ -771,8 +860,8 @@
 				plus.io.resolveLocalFileSystemURL(e, function(entry) {
 					var s = entry.toLocalURL() + "?version=" + new Date().getTime();
 					console.log(s);
-					document.getElementById("head-img").src = s;
-					document.getElementById("head-img1").src = s;
+					//document.getElementById("head-img").src = s;
+					//document.getElementById("head-img1").src = s;
 					//变更大图预览的src
 					//目前仅有一张图片，暂时如此处理，后续需要通过标准组件实现
 					document.querySelector("#__mui-imageview__group .mui-slider-item img").src = s + "?version=" + new Date().getTime();;;
@@ -796,8 +885,8 @@
 								console.log("file remove success");
 								entry.copyTo(root, 'head.jpg', function(e) {
 										var e = e.fullPath + "?version=" + new Date().getTime();
-										document.getElementById("head-img").src = e;
-										document.getElementById("head-img1").src = e;
+										//document.getElementById("head-img").src = e;
+										//document.getElementById("head-img1").src = e;
 										//变更大图预览的src
 										//目前仅有一张图片，暂时如此处理，后续需要通过标准组件实现
 										document.querySelector("#__mui-imageview__group .mui-slider-item img").src = e + "?version=" + new Date().getTime();;
@@ -812,8 +901,8 @@
 							//文件不存在
 							entry.copyTo(root, 'head.jpg', function(e) {
 									var path = e.fullPath + "?version=" + new Date().getTime();
-									document.getElementById("head-img").src = path;
-									document.getElementById("head-img1").src = path;
+									//document.getElementById("head-img").src = path;
+									//document.getElementById("head-img1").src = path;
 									//变更大图预览的src
 									//目前仅有一张图片，暂时如此处理，后续需要通过标准组件实现
 									document.querySelector("#__mui-imageview__group .mui-slider-item img").src = path;
@@ -837,35 +926,35 @@
 			if(mui.os.plus){
 				plus.io.resolveLocalFileSystemURL("_doc/head.jpg", function(entry) {
 					var s = entry.fullPath + "?version=" + new Date().getTime();;
-					document.getElementById("head-img").src = s;
-					document.getElementById("head-img1").src = s;
+					//document.getElementById("head-img").src = s;
+					//document.getElementById("head-img1").src = s;
 				}, function(e) {
-					document.getElementById("head-img").src = '../img/buycontent/titpic.png';
-					document.getElementById("head-img1").src = '../img/buycontent/titpic.png';
+					//document.getElementById("head-img").src = '../img/buycontent/titpic.png';
+					//document.getElementById("head-img1").src = '../img/buycontent/titpic.png';
 				})
 			}else{
-				document.getElementById("head-img").src = '../img/buycontent/titpic.png';
-				document.getElementById("head-img1").src = '../img/buycontent/titpic.png';
+				//document.getElementById("head-img").src = '../img/buycontent/titpic.png';
+				//document.getElementById("head-img1").src = '../img/buycontent/titpic.png';
 			}
 			
 		}
 		document.getElementById("head-img1").addEventListener('tap', function(e) {
 			e.stopPropagation();
 		});
-		document.getElementById("welcome").addEventListener('tap', function(e) {
-			//显示启动导航
-			mui.openWindow({
-				id: 'guide',
-				url: 'guide.html',
-				show: {
-					aniShow: 'fade-in',
-					duration: 300
-				},
-				waiting: {
-					autoShow: false
-				}
-			});
-		});
+//		document.getElementById("welcome").addEventListener('tap', function(e) {
+//			//显示启动导航
+//			mui.openWindow({
+//				id: 'guide',
+//				url: 'guide.html',
+//				show: {
+//					aniShow: 'fade-in',
+//					duration: 300
+//				},
+//				waiting: {
+//					autoShow: false
+//				}
+//			});
+//		});
 
 		function initImgPreview() {
 			var imgs = document.querySelectorAll("img.mui-action-preview");
