--- a/freight/html/tradelist.html
+++ b/freight/html/tradelist.html
@@ -104,114 +104,44 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell">
-						<div class="mui-table">
-							<div class="mui-table-cell">
-								<div class="center-list-span">
-									<span class="center-list-span-color2">[支]</span>查货宝测试账号1-长期运费券-<span class="center-list-span-color2">412分</span>
-								</div>
-								<div class="center-li-content-div1">
-									<div class="center-li-content-div1-span2">
-										交易对象：查货宝
-									</div>
-									<div class="center-li-content-div1-span2">
-										交易日期：2018-10-22 17:37:22
-									</div>
-								</div>	
-							</div>
-						</div>
-					</li>
-					<li class="mui-table-view-cell">
-						<div class="mui-table">
-							<div class="mui-table-cell">
-								<div class="center-list-span">
-									<span class="center-list-span-color2">[支]</span>查货宝测试账号1-长期运费券-<span class="center-list-span-color2">412分</span>
-								</div>
-								<div class="center-li-content-div1">
-									<div class="center-li-content-div1-span2">
-										交易对象：查货宝
-									</div>
-									<div class="center-li-content-div1-span2">
-										交易日期：2018-10-22 17:37:22
-									</div>
-								</div>	
-							</div>
-						</div>
-					</li>
-					<li class="mui-table-view-cell">
-						<div class="mui-table">
-							<div class="mui-table-cell">
-								<div class="center-list-span">
-									<span class="center-list-span-color2">[支]</span>查货宝测试账号1-长期运费券-<span class="center-list-span-color2">412分</span>
-								</div>
-								<div class="center-li-content-div1">
-									<div class="center-li-content-div1-span2">
-										交易对象：查货宝
-									</div>
-									<div class="center-li-content-div1-span2">
-										交易日期：2018-10-22 17:37:22
-									</div>
-								</div>	
-							</div>
-						</div>
-					</li>
-					<li class="mui-table-view-cell">
-						<div class="mui-table">
-							<div class="mui-table-cell">
-								<div class="center-list-span">
-									<span class="center-list-span-color3">[收]</span>查货宝测试账号1-长期运费券-<span class="center-list-span-color3">412分</span>
-								</div>
-								<div class="center-li-content-div1">
-									<div class="center-li-content-div1-span2">
-										交易对象：查货宝
-									</div>
-									<div class="center-li-content-div1-span2">
-										交易日期：2018-10-22 17:37:22
-									</div>
-								</div>	
-							</div>
-						</div>
-					</li>
-					<li class="mui-table-view-cell">
-						<div class="mui-table">
-							<div class="mui-table-cell">
-								<div class="center-list-span">
-									<span class="center-list-span-color3">[收]</span>查货宝测试账号1-长期运费券-<span class="center-list-span-color3">412分</span>
-								</div>
-								<div class="center-li-content-div1">
-									<div class="center-li-content-div1-span2">
-										交易对象：查货宝
-									</div>
-									<div class="center-li-content-div1-span2">
-										交易日期：2018-10-22 17:37:22
-									</div>
-								</div>	
-							</div>
-						</div>
-					</li>
-					<li class="mui-table-view-cell">
-						<div class="mui-table">
-							<div class="mui-table-cell">
-								<div class="center-list-span">
-									<span class="center-list-span-color1">[收]</span>查货宝测试账号1-长期运费券-<span class="center-list-span-color1">412分</span>
-								</div>
-								<div class="center-li-content-div1">
-									<div class="center-li-content-div1-span2">
-										交易对象：查货宝
-									</div>
-									<div class="center-li-content-div1-span2">
-										交易日期：2018-10-22 17:37:22
-									</div>
-								</div>	
-							</div>
-						</div>
-					</li>
+				<ul class="mui-table-view mui-table-view-chevron" id="ul_trade">
+					
 				</ul>
 			</div>
 		</div>
+		<script src="../js/template.min.js"></script>
 		<script src="../js/mui.min.js"></script>
-        <script src="../js/app.js"></script>
+		<script src="../js/zepto.js"></script>
+		<script src="../js/reconnecting-websocket.min.js"></script>
+		<script src="../js/stomp.min.js"></script>
+		<script src="../js/sockjs.min.js"></script>
+		<script src="../js/app.js"></script>
+		<script type="text/html" id="tradelist">
+			<%
+				for(var i = 0;i < list.length;i++)
+				{
+					%>
+						<li class="mui-table-view-cell">
+							<div class="mui-table">
+								<div class="mui-table-cell">
+									<div class="center-list-span">
+										<span class="center-list-span-color2">[付]</span><%=list[i].carduserxm %>-<span class="center-list-span-color2"><%=list[i].points %>券</span>
+									</div>
+									<div class="center-li-content-div1">
+										<div class="center-li-content-div1-span2">
+											交易对象：<%=list[i].receiveuserxm %>
+										</div>
+										<div class="center-li-content-div1-span2">
+											交易日期：<%=list[i].addtime %>
+										</div>
+									</div>	
+								</div>
+							</div>
+						</li>
+					<%
+				}
+			%>
+		</script>
 		<script>
 		    mui.init({
 		        pullRefresh: {
@@ -223,18 +153,40 @@
 		        }
 		        
 		    });
-		    var count = 0;
+		    var count = 1;
+			var pageSize = 10;
 		    /**
 			 * 上拉加载具体业务实现
 			 */
 		    function pullupRefresh() {
-		        mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 1));
+		    		var data = {
+					queryData:{
+						tradeCode:'tbbpay.myPay',
+						currentPage:count,
+						payuserid:localStorage.getItem('userid'),
+						pageSize:pageSize
+					}
+				};
+				lnjoy.GetDataByPost(data,function(rs){
+					console.log('%o',rs);
+//					for(var i = 0;i<rs.list.length;i++)
+//					{
+//						console.log(rs.list[i].addtime);
+//						console.log(new Date(rs.list[i].addtime));
+//						rs.list[i].addtime = new Date(rs.list[i].addtime).Format("yyyy-MM-dd HH:mm:ss");
+//					}
+					mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > parseInt(rs.pagination.totalPage))); //参数为true代表没有更多数据了。
+					var html = template('tradelist',rs);
+					$('#ul_trade').append(html);
+					//document.getElementById('wp').innerHTML = html;
+				});
+		        //mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 1));
 		    }
 		    if (mui.os.plus) {
 		        mui.plusReady(function () {
 		            setTimeout(function () {
 		                mui('#pullrefresh').pullRefresh().pullupLoading();
-		            }, 1000);
+		            }, 500);
 
 		        });
 		    } else {
